--- a/03-documentation_actions.Rmd
+++ b/03-documentation_actions.Rmd
@@ -66,7 +66,7 @@ jobs:
 
 N.B. The usethis function is not currently exported into the NAMESPACE of `usethis` but is documented.
 
-Now we need to git add and commit the yaml file, and push the changes to Github.
+Now we need to `git add` and `commit` the yaml file, and `push` the changes to GitHub.
 
 ## Action to deploy a bookdown site
 
