--- a/03-documentation_actions.Rmd
+++ b/03-documentation_actions.Rmd
@@ -131,4 +131,4 @@ To use the above yaml file that is responsible for deploying this book, you can 
 usethis:::use_github_action(url = "https://raw.githubusercontent.com/ropenscilabs/actions_sandbox/master/.github/workflows/deploy_bookdown.yml")
 ```
 
-N.B. `usethis:::use_github_action()` is not currently exported into the NAMESPACE of `usethis`.
+N.B. `usethis:::use_github_action()` is not currently (Dec 2019) exported into the NAMESPACE of `usethis`, but it is likely to be added soon.
