--- a/02-package_ci.Rmd
+++ b/02-package_ci.Rmd
@@ -90,6 +90,23 @@ On your repository you can see the what action are running under the "Actions" t
 knitr::include_graphics("images/actions_panel.png")
 ```
 
+## Did it succeed?
+
+You can get information about the status of your github action by looking under the actions tab and once completed there will be either a green tick or red cross next to the action. By clicking on the action itself while it's running or after it's finished you can view the run logs which can be useful to understand if your action failed.
+
+```{r, eval = TRUE, echo = FALSE}
+knitr::include_graphics("images/actions_panel2.png")
+```
+
+Further information can be found by clicking on a particular action and there is the option to make this information displayed as a badge on your README by using the create badge button and copying the markdown code into your README.md file.
+
+```{r, eval = TRUE, echo = FALSE}
+knitr::include_graphics("images/rcmd_check_status.png")
+```
+
+```{r, eval = TRUE, echo = FALSE}
+knitr::include_graphics("images/create_badge.png")
+```
 
 ## What next?
 
